--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "bak-end",
   "version": "1.0.0",
   "description": "",
-  "main": "srever.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Multicube Team",
   "license": "ISC",
